# lipm_walking_controller

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: LIPMWalking.conf  build.yml  mc_rtc.conf  mc_rtc.yaml
doc/: build.dox  mainpage.dox  overview.dox  stabilizer.dox
etc/: LIPMWalking.conf.cmake  LIPMWalking.in.yaml
include/lipm_walking/: Contact.h  Controller.h  ModelPredictiveControl.h  PlanInterpolator.h  Preview.h  Stabilizer.h  State.h
include/lipm_walking/utils/: SE2d.h  clamp.h
src/: CMakeLists.txt  Controller.cpp  FootstepPlan.cpp  ModelPredictiveControl.cpp  PlanInterpolator.cpp  Preview.cpp  Stabilizer.cpp
src/states/: CMakeLists.txt  DoubleSupport.cpp  Initial.cpp  Initial.h  RunStabilizer.cpp  RunStabilizer.h  SingleSupport.cpp  SingleSupport.h  Standing.cpp  Standing.h
